--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <!DOCTYPE html>
 <html>
 <head>
@@ -28,3 +28,52 @@
         </table>  
 </body>
 </html>
+////////////////////////// -->
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container">
+<div class="row col-md-6 col-md-offset-2 custyle">
+<table class="table table-striped custab">
+    <thead>
+        <tr>
+            
+            <th>Title</th>
+            <th>Price</th>
+            <th>Quantity</th>
+            <th class="text-center">Action</th>
+        </tr>
+    </thead>
+    <tr *ngFor="let c of cart1">
+        
+        <td>{{c.title}} </td>
+        <td>{{c.price}}</td>
+        <td>{{c.quantity}}</td>
+  
+        
+        <td class="text-center"><a class='btn btn-info btn-xs'  (click)="increaseQunatity(c)">
+             +</a> <a  class="btn btn-danger btn-xs"  (click)="[deleteBookFromCart(c),exit()]" >
+            <span class="glyphicon glyphicon-remove" ></span> Delete</a>
+            <a class='btn btn-info btn-xs'  (click)="decreaseQunatity(c)">
+                -</a></td>
+    </tr>
+</table>
+<!-- <div class="table-responsive col-md-6">
+    <table>...</table>
+</div>
+<div class="table-responsive col-md-6">
+    <table>...</table>
+</div> -->
+<!-- <div>Subtotal: ₹100 <button>Place Order</button></div>
+    </div> -->
+    <div class="text-center">
+    <button (click)="totalBill()" class="btn btn-primary">Done</button>
+    </div>
+    <div class="container">
+        <table class="table table-striped custab2"><thead class="tab" [routerLink]="['/place-order']"><th>Subtotal: ₹{{sum}} <button class="btn btn-primary btn-sm">Place Order</button>
+        </th></thead></table>
+    </div>  
+</div>
+<!-- <app-place-order  [sum]="orderTotal()"></app-place-order> -->
