--- a/src/app/order-details/order-details.component.html
+++ b/src/app/order-details/order-details.component.html
@@ -42,16 +42,11 @@
             <div class="col-5 pull-right"> <span id="heading">Order Id.</span><br> <span id="details">{{bookOrder.orderId}}</span> </div>
         </div>
     </div>
-    <div class="pricing">
-        <div class="row">
-            <!-- <div class="col-9"> <span id="name">BEATS Solo 3 Wireless Headphones</span> </div> -->
-            <div class="col-3"> <span id="price">{{bookOrder.orderTotal}}</span> </div>
-        </div>
-    </div>
+    
     <div class="total">
         <div class="row">
             <div class="col-9"></div>
-            <div class="col-3">{{bookOrder.orderTotal}}</div>
+            <div class="col-3">Total:{{bookOrder.orderTotal}}</div>
         </div>
     </div>
     <div class="tracking">
