--- a/src/app/customer/place-order/place-order.component.html
+++ b/src/app/customer/place-order/place-order.component.html
@@ -10,7 +10,8 @@
  <form name="qryform" id="qryform">
 	 <h2>Your order ID:{{orderID}}</h2>
 	 
-	 <div class="form-group"[(ngModel)]="bookOrder.customerId" name="customerId" ngDefaultControl [ngModelOptions]="{standalone: true}">
+	 <div class="form-group"[(ngModel)]="bookOrder.customerId" name="customerId" 
+	 ngDefaultControl [ngModelOptions]="{standalone: true}">
 		<label>Customer ID:</label>
 		<h2></h2>
 	  </div>
@@ -30,7 +31,9 @@
     </div>
 	<div class="form-group">
       <label>Your Name:</label>
-      <input type="text" class="form-control"  placeholder="Enter your name" name="recipientName" ngDefaultControl [(ngModel)]="bookOrder.recipientName" [ngModelOptions]="{standalone: true}">
+      <input type="text" class="form-control"  placeholder="Enter your name"
+	   name="recipientName" ngDefaultControl [(ngModel)]="bookOrder.recipientName"
+	    [ngModelOptions]="{standalone: true}" required minlength="3">
     </div>
 	<div class="form-group">
 		<label>Your Address:</label>
@@ -42,8 +45,8 @@
 	  </div>
 	  <div class=row>
 		  <div class="column">
-    <button type="submit" class="btn btn-info" *ngIf="!isValid"  (click)="bookOrderDetails()" [routerLink]="['/order-details']">Order & see Invoice</button>
-	<button type="submit" *ngIf="isValid"  (click)="bookOrderDetails()" [routerLink]="['/payment']" class="btn btn-light">Proceed to payment</button></div>
+    <button type="submit" class="btn btn-info" *ngIf="isValid"  (click)="bookOrderDetails()" [routerLink]="['/order-details']">Order & see Invoice</button>
+	<button type="submit" *ngIf="!isValid"  (click)="bookOrderDetails()" [routerLink]="['/payment']" class="btn btn-light">Proceed to payment</button></div>
 	<div class="column">
 	<button type="submit" class="btn btn-danger" [routerLink]="['/cart']" style="scroll-padding-left: 10px;float: right;">Cancel</button>
 	</div>
